Fix Box shadow glitch on the playerTurnIndicators by giving margins to the player turn indicator boxes. Increase font size of playerturnindicator and also add flex wrap so that the box shadow does not glitch.

--- a/style.css
+++ b/style.css
@@ -264,6 +264,23 @@ padding-bottom: 1rem;
 }
 
 
+/*******Player Turn Indicator *********/
+
+.playerTurnIndicator {
+
+    display: flex;
+    justify-content: space-around;
+    gap: 2rem;
+    flex-wrap: wrap;
+    margin-left:.5rem;
+    margin-right: .5rem;
+    margin-top:2rem;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+
+}
+
+
 
 
 
